--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@rblock919/eslint-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Ryan Block's Shared EsLint Configuration",
   "main": "index.js",
   "author": "Ryan Block",
-  "files": ["index.js", "README.md"],
+  "files": [
+    "index.js",
+    "README.md"
+  ],
   "license": "ISC",
   "readme": "README.md",
   "peerDependencies": {
